[tool.poetry]
name = "fasthue"
version = "1.2.1"
description = "HomeAssistant integration to customize Hue polling for sensors and remotes"
authors = ["Eugenio Panadero <eugenio.panadero@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
homeassistant = ">=2021.1.3"

[tool.poetry.dev-dependencies]
pre-commit = ">=2.2.0"

[tool.black]
line_length = 88
target_version = ["py37", "py38"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
